Improve compilation script and remove unnecessary flags